--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -15,6 +15,10 @@
     padding-top: 16px;
 }
 
+.home-spinner {
+    padding-bottom: 16px;
+}
+
 @media (max-width: 721px) {
     .home-container {
         .lc-container {
